- Updated home page with Jssor JavaScript/jQuery Image Slider 	- 3 placeholder images are used -> size of final banners are yet to be determined 	- Included code for responsive web design - Bug fixes for responsive navigation bar 	- Search bar and related elements no longer reflow haphazardly when window width changes 	- [Mobile View] Collapse toggle button addition and mouseover/mouseout effect correction - Updated readme

--- a/global.css
+++ b/global.css
@@ -2,3 +2,21 @@ a, body, div, form, h1, h2, h3, h4, h5, h6, img, li, nav, ul {
     margin:0;
     padding:0;
 }
+.navbar-default button.navbar-toggle.collapsed:focus,
+.navbar-default button.navbar-toggle.collapsed{
+    background-color: transparent;
+    -webkit-transition:all .4s;
+    -moz-transition:all .4s;
+    -ms-transition:all .4s;
+    -o-transition:all .4s;
+    transition:all .4s;
+}
+.navbar-default button.navbar-toggle:focus,
+.navbar-default button.navbar-toggle.collapsed:hover{
+    background-color:#ddd;
+    -webkit-transition:all .4s;
+    -moz-transition:all .4s;
+    -ms-transition:all .4s;
+    -o-transition:all .4s;
+    transition:all .4s;
+}
